views/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --main-background-color: #F0F5F8;
    --button-background: #F9F9F9;
    --text-color: #FFF;   
    --sidebar-width: 68px;
}

.material-icons, .icon-text {
    vertical-align: middle;
  }

@font-face {
    font-family: 'Poppins';
    src: url("../fonts/Poppins-Regular.ttf");
}

body {
    font-family: 'Poppins'!important;    
    display: grid;
    grid-template-columns: calc(100% - 260px) 260px;
    grid-template-rows: 80px auto;
    grid-template-areas: "navbar navbar"
                         "content sidebar";
    min-height: 100vh;    
}
/* Containers */
.container {
    max-width: 1050px!important;    
}

.navbar .container {
    max-width: 1350px!important;
}

.navbar {
    border-bottom: 2px #f6f6f6 solid;
    height: 80px;
    grid-area: navbar;
    box-shadow: 0 10px 20px -12px rgba(0,0,0,.25);
}

.navbar-brand {
    width: 110px;
    height: 115px;
    line-height: 70px;  
}

.navbar-brand img {
    width: 100%;
    height: 100%;
}

.search-bar {
    border-radius: 20px!important;
    height: 45px;    
    width: 220px!important;
    background-color: var(--button-background)!important;
    border: 1px #f1f1f1 solid!important;    
}

.navbar-nav li a {
    color: #000;
}

.navbar-account {
    cursor: pointer;
}

.navbar-account-item {
    font-size: 14px;
}

#navbarDropdownMenuLink-5::after{
    display: none;
}

.notification-menu {
    width: 22rem;
}

.navbar-notification-item {
    font-size: 13px!important;
    width: 100%;
    line-height: 2rem!important;       
    min-height: 2rem;
    max-height: 15rem;    
    white-space: pre-wrap!important;           
    display: inline-block;
}

.navbar-notification-item:focus {
    background-color: rgb(226, 226, 226)!important;
    color: #000!important;
}

.new-notification {
    margin-left: 5%;
}

.delete-notification {
    font-size: 16px!important;
    margin-left: 2%;
    background-color: #f0f0f0;
    width: 17px;
    height: 17px;
    border-radius: 50px;
    text-align: center;     
}


.sidebar {        
    right: 0;
    height: 100vh;
    /* border-right: 2px #f6f6f6 solid; */
    background: #FAFAFA;
    grid-area: sidebar;          
    transition: all ease .3s;    
    position: fixed;
    width: 260px;
    top: 80px;        
    overflow: scroll;
}

.sidebar .links {        
    list-style: none;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;    
    margin: 0 auto;
    padding: 10% 0;
    height: 100vh;    
}

.sidebar .links li {
    width: 100%;        
}

.sidebar .links li a {    
    height: 50px;
    display: grid;
    grid-template-columns: max-content max-content;
    align-items: center;
    column-gap: 1.5rem;    
    text-decoration: none;
    opacity: .9;
    position: relative;
    padding: .5rem 0 .5rem 1.8rem;    
    /* color: rgba(255, 255, 255, 0.6);     */
    color: rgb(54, 54, 54);
    font-size: 15px;
}


.sidebar .links li a .material-icons {           
    font-size: 22px;
}

/* Sidebar Folders */
.module__link {
    /* height: 50px; */
    overflow: hidden;    
}

.show-folders {
    height: auto;
}
/* End Sidebar Folders */

.new__descussion {
    font-size: 13px!important;
    margin: 0 auto 1.5rem auto;
}

.active {
    color: #0069D9!important;
}

.active::before {
    content: '';
    width: 2px;
    background-color: #0069D9;
    position: absolute;
    height: 50%;    
    right: 0;
    margin-right: 15%;
}

.content {    
    background: #fafafa;
    height: 100%;
    grid-area: content;
    padding: 2rem 0;    
    font-size: .8rem!important;
}

.content a {
    color: #000;    
}

.content .card {
    box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
    background: #FFF;
    border-radius: 10px;
}

.content .card__tag {
    width: 90px;
    height: 20px;    
    border: 1px solid rgba(0,0,0,.125);
    border-radius: 10px;
    right: 3%;
    position: absolute;
    top: -10px;
    background-color: #FFF;
    font-size: 11px;
    text-align: center;
}

.content .card:hover {
    box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);    
    transition: all ease .4s;
}

.post-time {
    font-size: 12px;
}

.files {
    width: max-content;    
    overflow: hidden;
}

.files .file {
    background-color: #f7f7ff;
    padding: 1px;
    border: 1px solid #e4e6e8;
    border-radius: 5px;
    display: flex;    
    align-items: center;
    margin-bottom: 5px;
}

.files .file .icon {
    color: #0069D9;
    font-size: 21px;    
}

.files .file .file-name a{
    margin-left: 4px;
}

.comment{
    border-top: 1px solid #e4e6e8;
    border-bottom: 1px solid #e4e6e8;
    font-size: 12px;
    background-color: #FFF!important;
    width: 90%;
}

.comment-detail a {
    color: #2172CD;
}
/* ... */

